Fix text color for Glazy mouse catches when in dark mode. (glazy mouse best mouse)

--- a/src/modules/location-hud/event-locations/great-winter-hunt/styles.css
+++ b/src/modules/location-hud/event-locations/great-winter-hunt/styles.css
@@ -187,9 +187,14 @@ button.campHudSnowballShowdownView__buyButton {
   display: block;
 }
 
-.entry.short.active.catchsuccessloot[data-mouse-type="glazed"] {
+.entry.short.catchsuccessloot[data-mouse-type="glazed"] {
+  color: #000;
   background-color: #fcdb28;
   box-shadow: 0 0 10px 8px #fdee96 inset;
+}
+
+.entry.short.catchsuccessloot[data-mouse-type="glazed"] a {
+  color: #3b5998;
 }
 
 .headsUpDisplayWinterHuntRegionView__golemHuntsRemaining {
